--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <h1>Lanang Food</h1>
                     <p>Sambal unik berbahan premium, blend rempah menggiurkan!</p>
                     <p>Rasai sensasi menggoda kepedesan bersama spesialitas sambel terbaik persembahan dari dapur kami.</p>
-                    <a href="#" class="buy-button">Beli Sekarang</a>
+                    <a href="https://vt.tiktok.com/ZS6Qmq8ja/?page=Mall" class="buy-button">Beli Sekarang</a>
                 </div>
             </div>
     
